fix: dark mode management on gradient filters

--- a/app/globals.css
+++ b/app/globals.css
@@ -212,32 +212,42 @@ div#detailCountryContainer div {
         0 0 20px rgba(0, 21, 64, 0.14), 0 0 40px rgba(0, 0, 0, 0.2);
 }
 
+/* Gradients filters */
+
+/* Css variable declaration */
+:root {
+    --gradient-start: rgba(255, 255, 255, 0.7959558823529411);
+    --gradient-end: rgba(255, 255, 255, 0);
+    --dark-gradient-start: rgba(35, 39, 47, 0.7959558823529411);
+    --dark-gradient-end: rgba(76, 82, 94, 0);
+}
+
 .gradientToRight {
-    position: absolute;
-    pointer-events: none; /* Allow clicking through the overlay */
-    z-index: 100;
     left: 0;
-    width: 100%;
-    height: 50px;
-    background: rgb(35, 39, 47);
+    background: linear-gradient(90deg, var(--gradient-start) 0%, var(--gradient-end) 30%);
+}
+
+.dark .gradientToRight {
     background: linear-gradient(
         90deg,
-        rgba(35, 39, 47, 0.7959558823529411) 0%,
-        rgba(76, 82, 94, 0) 30%
+        var(--dark-gradient-start) 0%,
+        var(--dark-gradient-end) 30%
     );
 }
 
 .gradientToLeft {
-    position: absolute;
-    pointer-events: none; /* Allow clicking through the overlay */
-    z-index: 100;
     right: 0;
-    width: 100%;
-    height: 50px;
-    background: rgb(35, 39, 47);
     background: linear-gradient(
         270deg,
-        rgba(35, 39, 47, 0.7959558823529411) 0%,
-        rgba(76, 82, 94, 0) 30%
+        var(--gradient-start) 0%,
+        var(--gradient-end) 30%
+    );
+}
+
+.dark .gradientToLeft {
+    background: linear-gradient(
+        270deg,
+        var(--dark-gradient-start) 0%,
+        var(--dark-gradient-end) 30%
     );
 }
